--- a/release_notes/ocp-4-17-release-notes.adoc
+++ b/release_notes/ocp-4-17-release-notes.adoc
@@ -509,6 +509,13 @@ For more information, see _Configuring Capacity Reservation by using machine set
 === Network Observability Operator
 The Network Observability Operator releases updates independently from the {product-title} minor version release stream. Updates are available through a single, Rolling Stream which is supported on all currently supported versions of {product-title} 4. Information regarding new features, enhancements, and bug fixes for the Network Observability Operator is found in the xref:../observability/network_observability/network-observability-operator-release-notes.adoc#network-observability-rn[Network Observability release notes].
 
+[id="ocp-4-17-network-observability-1-6-2-known-issue_{context}"]
+==== Known issue
+The 1.6.2 version of the Network Observability Operator fixes a compatibility issue with console plugins that would have prevented Network Observability from being installed on future versions of an {product-title} cluster. Now this compatibility issue is resolved and Network Observability can be installed as expected. (link:https://issues.redhat.com/browse/NETOBSERV-1737[*NETOBSERV-1737*])
+
+
+
+
 [id="ocp-4-17-scalability-and-performance_{context}"]
 === Scalability and performance
 
