--- a/modules/updating-control-plane-only-update.adoc
+++ b/modules/updating-control-plane-only-update.adoc
@@ -1,10 +1,10 @@
 // Module included in the following assemblies:
 //
-// * updating/updating_a_cluster/eus-eus-update.adoc
+// * updating/updating_a_cluster/control-plane-only-update.adoc
 
 :_mod-docs-content-type: PROCEDURE
-[id="updating-eus-to-eus-upgrade_{context}"]
-= EUS-to-EUS update
+[id="updating-control-plane-only-update_{context}"]
+= Performing a Control Plane Only update
 
 The following procedure pauses all non-master machine config pools and performs updates from {product-title} <4.y> to <4.y+1> to <4.y+2>, then unpauses the previously paused machine config pools.
 Following this procedure reduces the total update duration and the number of times worker nodes are restarted.
@@ -12,6 +12,6 @@ Following this procedure reduces the total update duration and the number of tim
 .Prerequisites
 
 * Review the release notes for {product-title} <4.y+1> and <4.y+2>
-* Review the release notes and product lifecycles for any layered products and Operator Lifecycle Manager (OLM) Operators. Some may require updates either before or during an EUS-to-EUS update.
+* Review the release notes and product lifecycles for any layered products and Operator Lifecycle Manager (OLM) Operators. Some may require updates either before or during a Control Plane Only update.
 * Ensure that you are familiar with version-specific prerequisites, such as the removal of deprecated APIs, that are required prior to updating from {product-title} <4.y+1> to <4.y+2>.
 
